// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tracking tests on web TrackEvents forwards props to wrapped component 1`] = `
<div
  className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
  dir="auto"
>
  bar
</div>
`;

exports[`Tracking tests on web TrackEvents raises error when action name is not set 1`] = `"WithTrackEvents(TestComponent): Missing actionName at position 0, eventName event1"`;

exports[`Tracking tests on web TrackEvents raises error when event name is not set 1`] = `"WithTrackEvents(TestComponent): Missing eventName at position 0, actionName event1ed"`;

exports[`Tracking tests on web TrackEvents raises error when trying to track the same event more than once 1`] = `"WithTrackEvents(TestComponent): Event event1 was tracked multiple times"`;

exports[`Tracking tests on web TrackEvents renders when tracking context is missing 1`] = `
<div
  className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
  dir="auto"
>
  foo
</div>
`;

exports[`Tracking tests on web TrackEvents tracks multiple events 1`] = `
Array [
  Array [
    Object {
      "action": "event1ed",
      "attrs": Object {
        "args": Array [
          "event1 arg",
        ],
        "fromProps": "propValue",
        "static": "value",
      },
      "component": "TestComponent",
    },
  ],
  Array [
    Object {
      "action": "event2ed",
      "attrs": Object {
        "args": Array [
          "event2 arg",
        ],
        "fromProps": "propValue",
        "static": "otherValue",
      },
      "component": "TestComponent",
    },
  ],
]
`;

exports[`Tracking tests on web WithTrackScrollDepth does not report missing elements 1`] = `Array []`;

exports[`Tracking tests on web WithTrackScrollDepth forwards props to wrapped component 1`] = `
<div
  className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
  dir="auto"
>
  bar
</div>
`;

exports[`Tracking tests on web WithTrackScrollDepth renders when tracking context is missing 1`] = `
<div
  className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
  dir="auto"
>
  foo
</div>
`;

exports[`Tracking tests on web WithTrackScrollDepth tracks scroll depth 1`] = `
Array [
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 1,
          "total": 3,
        },
      },
      "component": "ListComponentChild",
    },
  ],
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 2,
          "total": 3,
        },
      },
      "component": "ListComponentChild",
    },
  ],
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 3,
          "total": 3,
        },
      },
      "component": "ListComponentChild",
    },
  ],
]
`;

exports[`Tracking tests on web WithTrackScrollDepth tracks scroll depth after update 1`] = `
Array [
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 1,
          "total": 3,
        },
      },
      "component": "ListComponentChild",
    },
  ],
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 2,
          "total": 3,
        },
      },
      "component": "ListComponentChild",
    },
  ],
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 3,
          "total": 3,
        },
      },
      "component": "ListComponentChild",
    },
  ],
  Array [
    Object {
      "action": "Scrolled",
      "attrs": Object {
        "scrollDepth": Object {
          "itemNumber": 4,
          "total": 4,
        },
      },
      "component": "ListComponentChild",
    },
  ],
]
`;

exports[`Tracking tests on web WithTrackingContext forwards props to wrapped component 1`] = `
<div
  className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
  dir="auto"
>
  bar
</div>
`;

exports[`Tracking tests on web WithTrackingContext raises error when analyticsStream not supplied to top-level context 1`] = `"Missing prop analyticsStream of WithTrackingContext"`;

exports[`Tracking tests on web WithTrackingContext raises error when tracking object not supplied to top-level context 1`] = `"Missing argument trackingObjectName of withTrackingContext()"`;
